--- a/pix/build.gradle
+++ b/pix/build.gradle
@@ -46,7 +46,7 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
     implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.fragment:fragment-ktx:1.3.4'
 
