--- a/pix/build.gradle
+++ b/pix/build.gradle
@@ -42,21 +42,21 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
-    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.10"
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.fragment:fragment-ktx:1.3.4'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.fragment:fragment-ktx:1.4.0'
 
-    def camerax_version = '1.1.0-alpha05'
+    def camerax_version = '1.1.0-alpha12'
     // CameraX core library using camera2 implementation
     implementation "androidx.camera:camera-camera2:$camerax_version"
     // CameraX Lifecycle Library
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     // CameraX View class
-    implementation 'androidx.camera:camera-view:1.0.0-alpha25'
+    implementation 'androidx.camera:camera-view:1.0.0-alpha32'
     // If you want to additionally use the CameraX Extensions library
-    implementation 'androidx.camera:camera-extensions:1.0.0-alpha25'
+    implementation 'androidx.camera:camera-extensions:1.0.0-alpha32'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -68,6 +68,6 @@ dependencies {
     }
 
     //Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0-native-mt'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
 
 }
